# SiteStone

./: .gitignore  Cargo.toml  README.md  biome.json  pnpm-workspace.yaml  rustfmt.toml
app/tauri/: Cargo.toml  tauri.conf.json
app/tauri/migrations/: 001_initial.sql
app/tauri/src/: error.rs  lib.rs  main.rs
app/tauri/src/commands/: bookmarks.rs
app/tauri/src/domain/: bookmark.rs
app/tauri/src/dto/: bookmark.rs
app/tauri/src/repository/: bookmark.rs
app/tauri/src/service/: bookmark.rs
app/tauri/src/sqlite/: bookmark.rs  db.rs
app/ui/: package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
app/ui/src/: app.css
app/ui/src/lib/: utils.test.ts
app/ui/src/routes/: +layout.svelte  +page.svelte
app/ui/src/routes/bookmarks/: +page.svelte
app/ui/src/routes/bookmarks/[id]/: +page.svelte
app/ui/src/routes/metrics/: +page.svelte
app/ui/src/routes/process/: +page.svelte
app/ui/src/routes/settings/: +page.svelte
